[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "snakesist"
version = "0.4-rc1"
description = "A Python database interface for eXist-db"
authors = [
    { name = "Theodor Costea", email = "theo.costea@gmail.com"},
    { name = "Frank Sachsenheim", email = "funkyfuture@riseup.net"},
]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
]
keywords = ["xml", "exist-db", "client", "delb"]
dependencies = [
    "delb[web-loader]~=0.6-rc1"
]

[project.entry-points.delb]
snakesist = "snakesist.delb_plugins"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://snakesist.readthedocs.io/"
Issues = "https://github.com/delb-xml/snakesist"
Repository = "https://github.com/delb-xml/snakesist"


[tool.hatch.envs.docs]
dependencies = [
    "furo",
    "sphinx-autobuild",
]
[tool.hatch.envs.docs.scripts]
build-html = "make -C docs html"
clean = "make -C docs clean"
doctest = "make -C docs doctest"
linkcheck = "make -C docs linkcheck"
serve = "sphinx-autobuild --open-browser --delay 2 --watch docs --watch snakesist docs docs/_build/html/"

[tool.hatch.envs.mypy]
dependencies = [
    "httpx",
    "mypy"
]
skipinstall = true
[tool.hatch.envs.mypy.scripts]
check = "mypy snakesist"

[tool.hatch.envs.tests]
dependencies = [
    "pytest-cov",
    "pytest-docker",
    "delb-reference-plugins~=0.6-rc0",
]
[tool.hatch.envs.tests.env-vars]
EXIST_VERSION = "{matrix:existdb_version}"
[[tool.hatch.envs.tests.matrix]]
existdb_version = [
    "4.11.2",
    "5.5.2",
    "6.3.0"
]
[tool.hatch.envs.tests.scripts]
check = "python -m pytest --cov=snakesist tests"
coverage-report = """
    python -m pytest \
        --cov-report term-missing:skip-covered \
        --cov=snakesist \
        tests
"""


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:unclosed:ResourceWarning",
]
